--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Portfolio Website</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png">
+    <title>Min Hen Yap - Full Stack Developer</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Full Stack Developer & Software Engineer specializing in web and mobile applications. Building innovative solutions with modern technologies." />
+    <meta name="keywords" content="Full Stack Developer, Software Engineer, Web Development, React, Node.js, Min Hen Yap" />
+    <meta name="author" content="Min Hen Yap" />
+
+    <!-- Open Graph Meta Tags (for social media sharing) -->
+    <meta property="og:title" content="Min Hen Yap - Full Stack Developer" />
+    <meta property="og:description" content="Full Stack Developer & Software Engineer specializing in web and mobile applications." />
+    <meta property="og:image" content="/profile.jpg" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Min Hen Yap - Full Stack Developer" />
+    <meta name="twitter:description" content="Full Stack Developer & Software Engineer specializing in web and mobile applications." />
+    <meta name="twitter:image" content="/profile.jpg" />
 </head>
   <body>
     <div id="root"></div>
